dynamiced politics english arthokodi report world section

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,3 +1,8 @@
+  @media (min-width: 768px) {
+    .border-last-none:last-child{
+        border-right: none !important;
+    }
+  }
   @media only screen and (max-width:768px) {
 
     .border-color {
