--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -2,6 +2,9 @@
     .border-last-none:last-child{
         border-right: none !important;
     }
+    .border-bottom-none:last-child{
+        border-bottom: none !important;
+    }
   }
   @media only screen and (max-width:768px) {
 
