added kormojok and play part

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -445,7 +445,9 @@ li.text-danger:nth-child(1) {
 .border-mr-right {
     border-right: none !important;
 }
-
+.margin-top-none:first-child{
+    margin-top: 0rem !important;
+}
 
 
 /* 
